--- a/readme
+++ b/readme
@@ -1,7 +1,6 @@
-Cette archive contient trois fichiers : 
-Corpus_Reddit_long.xml -> document contenant le corpus Reddit complet
+Cette archive contient plusieurs fichiers : 
 ExtractionMessages.py -> le script d'extraction de messages en fonction de leur tfidf
-Le présent readme
+
 
 Le script une fois lancé donne en sortie plusieurs fichiers : 
 CalculsTfIdf.csv -> fichier contenant les métriques en détail de chaque token
