--- a/readme
+++ b/readme
@@ -22,4 +22,5 @@ Analyse_Annotations.py:
 besedo_annot.csv -> document csv contenant toutes les annotations de l'équipe Besedo, doublons enlevés. Chaque ligne représente une annotation
 litl_annot.csv -> document csv contenant toutes les annotations de l'équipe LITL, doublons enlevés. Chaque ligne représente une annotation
 Nombre d'annotations de chaque catégorie d'annotation (accord, accord partiel, désaccord)
-Les scores de kappa de cohen, global et par étiquette
+Le score de kappa de cohen (accord inter-annotateur concernant l'absence ou la présence des CCI)
+Les détails des confusions entre les catégories
